--- a/index.html
+++ b/index.html
@@ -167,14 +167,16 @@
             padding: 5rem 2rem;
             max-width: 1200px;
             margin: 0 auto;
+            width: 100%;
         }
 
         .about-section {
             background: white;
             border-radius: 20px;
             padding: 4rem;
-            margin: 2rem;
+            margin: 2rem auto;
             box-shadow: 0 20px 60px rgba(0,0,0,0.1);
+            max-width: 1200px;
         }
 
         h2 {
@@ -213,8 +215,9 @@
             background: white;
             border-radius: 20px;
             padding: 4rem;
-            margin: 2rem;
+            margin: 2rem auto;
             box-shadow: 0 20px 60px rgba(0,0,0,0.1);
+            max-width: 1200px;
         }
 
         .filter-buttons {
@@ -316,8 +319,9 @@
             background: white;
             border-radius: 20px;
             padding: 4rem;
-            margin: 2rem;
+            margin: 2rem auto;
             box-shadow: 0 20px 60px rgba(0,0,0,0.1);
+            max-width: 1200px;
         }
 
         .timeline {
@@ -440,7 +444,7 @@
 
             .about-section, .projects-section, .experience-section {
                 padding: 2rem;
-                margin: 1rem;
+                margin: 1rem auto;
             }
         }
     </style>
