Add flexbox layout and adjust widths in CSS

--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
             max-width: 1200px;
             margin: 0 auto;
             width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .about-section {
@@ -177,6 +180,7 @@
             margin: 2rem auto;
             box-shadow: 0 20px 60px rgba(0,0,0,0.1);
             max-width: 1200px;
+            width: calc(100% - 4rem);
         }
 
         h2 {
@@ -218,6 +222,7 @@
             margin: 2rem auto;
             box-shadow: 0 20px 60px rgba(0,0,0,0.1);
             max-width: 1200px;
+            width: calc(100% - 4rem);
         }
 
         .filter-buttons {
@@ -322,6 +327,7 @@
             margin: 2rem auto;
             box-shadow: 0 20px 60px rgba(0,0,0,0.1);
             max-width: 1200px;
+            width: calc(100% - 4rem);
         }
 
         .timeline {
@@ -445,6 +451,7 @@
             .about-section, .projects-section, .experience-section {
                 padding: 2rem;
                 margin: 1rem auto;
+                width: calc(100% - 2rem);
             }
         }
     </style>
