Add display block to multiple elements
Added display property to various elements for layout consistency.

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
             box-shadow: 0 20px 60px rgba(0,0,0,0.1);
             max-width: 1200px;
             width: calc(100% - 4rem);
+            display: block;
         }
 
         h2 {
@@ -223,6 +224,7 @@
             box-shadow: 0 20px 60px rgba(0,0,0,0.1);
             max-width: 1200px;
             width: calc(100% - 4rem);
+            display: block;
         }
 
         .filter-buttons {
@@ -328,6 +330,7 @@
             box-shadow: 0 20px 60px rgba(0,0,0,0.1);
             max-width: 1200px;
             width: calc(100% - 4rem);
+            display: block;
         }
 
         .timeline {
@@ -580,23 +583,6 @@
                     <p>Serverless data engineering platform processing 10K+ daily log events. Features automated anomaly detection, star-schema modeling, and real-time QuickSight dashboards. Integrated NLP chatbot reduced incident investigation time by 40%.</p>
                     <div class="project-links">
                         <a href="https://github.com/wiamsalih" target="_blank">View Code</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-card" data-category="cloud">
-                <div class="project-header">
-                    <h3>Retail Sales Analytics</h3>
-                    <div class="project-tags">
-                        <span class="tag">Snowflake</span>
-                        <span class="tag">SQL</span>
-                        <span class="tag">ETL</span>
-                    </div>
-                </div>
-                <div class="project-body">
-                    <p>Data warehouse with ETL workflows integrating sales, product, and customer data. Built SQL queries for segmentation and revenue trend analysis supporting strategic sales decisions.</p>
-                    <div class="project-links">
-                        <a href="https://github.com/wiamsalih" target="_blank">Learn More</a>
                     </div>
                 </div>
             </div>
