Change display to align-items in index.html

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             box-shadow: 0 20px 60px rgba(0,0,0,0.1);
             max-width: 1200px;
             width: calc(100% - 4rem);
-            display: block;
+            align-items: stretch;
         }
 
         h2 {
@@ -224,7 +224,7 @@
             box-shadow: 0 20px 60px rgba(0,0,0,0.1);
             max-width: 1200px;
             width: calc(100% - 4rem);
-            display: block;
+            align-items: stretch;
         }
 
         .filter-buttons {
@@ -330,7 +330,7 @@
             box-shadow: 0 20px 60px rgba(0,0,0,0.1);
             max-width: 1200px;
             width: calc(100% - 4rem);
-            display: block;
+            align-items: stretch;
         }
 
         .timeline {
