Update project link text from 'View Code' to 'Check It Out'

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                 <div class="project-body">
                     <p>Intelligent chatbot providing financial advice using pre-trained question-answering models. Features Python + SQL ETL workflows and automated data refresh, saving 5+ hours monthly.</p>
                     <div class="project-links">
-                        <a href="https://wiamsalih-finance-chatbot.hf.space/" target="_blank">View Code</a>
+                        <a href="https://wiamsalih-finance-chatbot.hf.space/" target="_blank">Check It Out</a>
                     </div>
                 </div>
             </div>
