Update job title in hero section

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Wiam Salih</h1>
-            <p> Data Engineer | Cloud & Analytics Professional | AWS Certified</p>
+            <p> Software Engineer | Cloud & Analytics Professional | AWS Certified</p>
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">View My Work</a>
                 <a href="https://www.linkedin.com/in/wiam-salih-454069241/" target="_blank" class="btn btn-secondary">Connect With Me</a>
