Add DSA to Software Development skills

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         <div class="skills-grid">
             <div class="skill-card">
                 <h3>Software Development</h3>
-                <p>Java, Python, JavaScript, OOP</p>
+                <p>Java, Python, JavaScript, OOP, DSA</p>
             </div>
             <div class="skill-card">
                 <h3>ETL & Data Pipelines</h3>
